--- a/libft/.vscode/settings.json
+++ b/libft/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "__split_buffer": "c",
-        "array": "c",
-        "bitset": "c",
-        "initializer_list": "c",
-        "string": "c",
-        "string_view": "c",
-        "vector": "c"
-    }
+		"__split_buffer": "c",
+		"array": "c",
+		"bitset": "c",
+		"initializer_list": "c",
+		"string": "c",
+		"string_view": "c",
+		"vector": "c",
+		"stdio.h": "c"
+	}
 } 
