--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mokariou <mokariou@student.s19.be>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/13 12:47:30 by mokariou          #+#    #+#              #
-#    Updated: 2024/10/10 18:32:20 by mokariou         ###   ########.fr        #
+#    Updated: 2024/10/14 16:34:45 by mokariou         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ SRC = ft_memset.c ft_bzero.c ft_strlen.c ft_atoi.c ft_isdigit.c ft_isalpha.c \
       ft_memmove.c ft_strchr.c ft_strdup.c ft_strlcat.c ft_strlcpy.c ft_strncmp.c \
       ft_toupper.c ft_tolower.c ft_strnstr.c ft_strrchr.c ft_calloc.c ft_putchar_fd.c \
       ft_putstr_fd.c ft_putnbr_fd.c ft_putendl_fd.c ft_substr.c ft_strjoin.c ft_strtrim.c \
-      ft_strmapi.c ft_itoa.c ft_split.c
+      ft_strmapi.c ft_itoa.c ft_split.c ft_striteri.c
 
 SRC_BONUS = ft_lstadd_back_bonus.c ft_lstadd_front_bonus.c \
 ft_lstclear_bonus.c ft_lstdelone_bonus.c ft_lstiter_bonus.c \
