--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -3,12 +3,77 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mokariou <mokariou@student.42.fr>          +#+  +:+       +#+         #
+#    By: mokariou <mokariou@student.s19.be>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/16 17:38:28 by mokariou          #+#    #+#              #
-#    Updated: 2024/09/12 21:17:49 by mokariou         ###   ########.fr        #
+#    Updated: 2024/10/15 15:28:32 by mokariou         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
+
+# # Name of the executable/library
+# NAME = ft_printf
+
+# # Compiler and flags
+# CC = gcc
+# CFLAGS = -Wall -Wextra -Werror
+
+# # Source and object files
+# SRC = $(wildcard *.c)
+# OBJ = $(SRC:.c=.o)
+# AFILE = libftprintf.a
+
+# # Colors (Magenta, Cyan, Yellow, Blue)
+# MAGENTA = \033[35m
+# CYAN = \033[36m
+# YELLOW = \033[33m
+# BLUE = \033[34m
+# RESET = \033[0m
+
+# # Enhanced FT_printf Logo with More Cool Colors
+# LOGO = "\n${CYAN}███████╗████████╗    ${MAGENTA}████████╗██████╗ ${CYAN}████████╗███████╗\n\
+# ${CYAN}██╔════╝╚══██╔══╝    ${MAGENTA}╚══██╔══╝██╔══██╗${CYAN}╚══██╔══╝██╔════╝\n\
+# ${CYAN}███████╗   ██║       ${MAGENTA}   ██║   ██████╔╝   ${CYAN} ██║   █████╗  \n\
+# ${CYAN}╚════██║   ██║       ${MAGENTA}   ██║   ██╔═══╝    ${CYAN} ██║   ██╔══╝  \n\
+# ${CYAN}███████║   ██║       ${MAGENTA}   ██║   ██║        ${CYAN} ██║   ███████╗\n\
+# ${CYAN}╚══════╝   ╚═╝       ${MAGENTA}   ╚═╝   ╚═╝        ${CYAN} ╚═╝   ╚══════╝\n\
+# ${RESET}"
+
+# # Targets
+# all: $(AFILE) $(NAME)
+
+# # Creating the static library
+# $(AFILE): $(OBJ)
+# 	@echo "${BLUE}Creating static library...${RESET}"
+# 	ar rc $(AFILE) $(OBJ)
+# 	ranlib $(AFILE)
+# 	@echo "${MAGENTA}Static library created successfully!${RESET}"
+
+# # Creating the executable
+# $(NAME): $(OBJ)
+# 	@echo "$(LOGO)"
+# 	@echo "${YELLOW}Compiling executable...${RESET}"
+# 	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+# 	@echo "${MAGENTA}Compilation successful! Executable created.${RESET}"
+
+# # Object files generation
+# %.o: %.c
+# 	@echo "${CYAN}Compiling $< ...${RESET}"
+# 	$(CC) $(CFLAGS) -c $< -o $@
+
+# # Clean object files
+# clean:
+# 	@echo "${BLUE}Removing object files...${RESET}"
+# 	rm -f $(OBJ)
+# 	@echo "${MAGENTA}Object files removed.${RESET}"
+
+# # Full clean: remove object files, static library, and executable
+# fclean: clean
+# 	@echo "${BLUE}Removing static library and executable...${RESET}"
+# 	rm -f $(AFILE) $(NAME)
+# 	@echo "${MAGENTA}Cleaned up!${RESET}"
+
+# # Rebuild everything
+# re: fclean all
 
 NAME = ft_printf
 
@@ -16,7 +81,8 @@ CC = gcc
 
 CFLAGS = -Wall -Wextra -Werror
 
-SRC = $(wildcard *.c)
+SRC = ft_address.c ft_print_hex.c ft_printf.c /
+ft_unsigned.c printnum.c putstr.c
 
 OBJ = $(SRC:.c=.o)
 
